--- a/gallerydownload/build.gradle
+++ b/gallerydownload/build.gradle
@@ -62,4 +62,8 @@ dependencies {
 
     implementation "androidx.viewpager2:viewpager2:1.0.0"
     implementation 'com.google.android.material:material:1.4.0'
+
+    // Lifecycles only (without ViewModel or LiveData)
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.6.0-alpha01"
+
 }
