--- a/pagergallerysave/build.gradle
+++ b/pagergallerysave/build.gradle
@@ -10,7 +10,7 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.example.gallerydownload"
+        applicationId "com.yett.pagergallerysave"
         minSdk 21
         targetSdk 32
         versionCode 1
@@ -32,12 +32,11 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
     //Parcelable简洁方式
     androidExtensions{
         experimental = true
     }
-    //noinspection DataBindingWithoutKapt
-    dataBinding.enabled = true
 }
 
 dependencies {
@@ -46,8 +45,6 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -67,5 +64,4 @@ dependencies {
 
     // Lifecycles only (without ViewModel or LiveData)
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.6.0-alpha01"
-
 }
