能够在gallery列表界面展示网络数据，但是还需要进一步完善

--- a/settings.gradle
+++ b/settings.gradle
@@ -18,3 +18,4 @@ include ':viewpagedemo'
 include ':pagergallery'
 include ':gallerydownload'
 include ':pagergallerysave'
+include ':galleryupdate'
