--- a/settings.gradle
+++ b/settings.gradle
@@ -19,3 +19,4 @@ include ':pagergallery'
 include ':gallerydownload'
 include ':pagergallerysave'
 include ':galleryupdate'
+include ':galleryupdate2'
